--- a/src/pages/Cadastro/Cadastro.css
+++ b/src/pages/Cadastro/Cadastro.css
@@ -76,16 +76,17 @@ h2 {
 
 .role-button {
     padding: 10px 20px;
-    background-color: #FF8C40;
-    color: #fff;
-    border: none;
+    border: solid 2px #f59f65;
+    color: #FF8C40;
+    background-color: white;
     border-radius: 4px;
     cursor: pointer;
     flex: 1;
 }
 
 .role-button.active {
-    background-color: #ef6233;
+    background-color: #ff7142;
+    color:white;
 }
 
 .cadastro-button {
@@ -93,6 +94,7 @@ h2 {
     width: 100%;
     padding: 10px;
     background-color: #FF8C40;
+    font-weight:bold;
     color: #fff;
     border: none;
     border-radius: 4px;
