--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -40,7 +40,7 @@ body {
   margin-bottom: 20px;
 }
 
-.option-card button {
+.option-card a {
   padding: 10px 20px;
   background-color: #FF8C40;
   color: #fff;
@@ -48,9 +48,12 @@ body {
   border-radius: 4px;
   font-size: 14px;
   cursor: pointer;
+  width:17rem;
+  margin: auto;
+  text-decoration: none ;
 }
 
-.option-card button:hover {
+.option-card a:hover {
   background-color: #e0732d;
 }
 
