--- a/src/pages/Recrutamento/Recrutamento.css
+++ b/src/pages/Recrutamento/Recrutamento.css
@@ -59,6 +59,10 @@
     font-size: 1em;
     color: #333;
   }
+
+  .recrutamento-item:hover {
+    background-color: #f5f5f5;
+  }
   
   .termino {
     color: #FF8C40;
@@ -75,6 +79,7 @@
     font-size: 1em;
     cursor: pointer;
     margin-top: 20px;
+    text-decoration: none;
   }
   
   .create-button:hover {
