--- a/src/pages/RecrutamentoDetalhes/RecrutamentoDetalhes.css
+++ b/src/pages/RecrutamentoDetalhes/RecrutamentoDetalhes.css
@@ -16,9 +16,10 @@
     font-size: 1.2em;
     font-weight: 400;
     color: #333;
-    border-bottom: 1px solid #ccc;
     padding-bottom: 5px;
     margin-bottom: 15px;
+    font-weight:bold;
+    margin-top: 1rem;
   }
   
   .candidate-card {
